--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,3 +48,5 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: root
       PGADMIN_DEFAULT_PASSWORD: secret
+    depends_on:
+      - postgres
